<?xml version="1.0"?>
<package>
  <name>tony_robot</name>
  <version>0.0.1</version>
  <description>The tony_robot package</description>
  <maintainer email="jeff.gao@tonyrobotics.com">jeff</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
