<?xml version="1.0"?>
<package>
  <name>trd_diff_controller</name>
  <version>0.0.1</version>
  <description>The trd_diff_controller package</description>
  <maintainer email="jeff.gao@tonyrobotics.com">jeff.gao</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/trd_diff_controller</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
